--- a/themes/yilia/layout/_partial/footer.ejs
+++ b/themes/yilia/layout/_partial/footer.ejs
@@ -4,17 +4,17 @@
   <div class="outer">
     <div id="footer-info">
     	<div class="footer-left">
-    		&copy; <%= date(new Date(), 'YYYY') %> <i class="fa fa-heart"></i> <%= config.author || config.title %>
+    		&copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
     	</div>
       	<div class="footer-right">
 		<span id="busuanzi_container_site_pv">
-		  本站总访问量<span id="busuanzi_value_site_pv"></span>次
+		  本站总访问量 <span id="busuanzi_value_site_pv" style="color: #cc1a1a; font-size: 13px; font-style: italic"></span> 次
 		</span>
 		<span id="busuanzi_container_site_uv">
-		  您是本站第<span id="busuanzi_value_site_uv"></span>位访问者
+		  | 您是本站第 <span id="busuanzi_value_site_uv" style="color: #cc1a1a; font-size: 13px; font-style: italic"></span> 位访客
 		</span>
 		<span id="busuanzi_container_page_pv">
-		  本文总阅读量<span id="busuanzi_value_page_pv"></span>次
+		  | 本文总阅读量 <span id="busuanzi_value_page_pv" style="color: #cc1a1a; font-size: 13px; font-style: italic"></span> 次
 		</span>
       		<!--<a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/litten/hexo-theme-yilia" target="_blank">Yilia</a> by Litten-->
       	</div>
