--- a/themes/yilia/layout/_partial/after-footer.ejs
+++ b/themes/yilia/layout/_partial/after-footer.ejs
@@ -20,4 +20,4 @@
 <% } %>
 
 <%- partial('totop') %>
-<script src="<%- config.root %>js/totop.js"></script>
+<script src="<%- config.root %>/totop.js"></script>
