--- a/themes/yilia/layout/_partial/after-footer.ejs
+++ b/themes/yilia/layout/_partial/after-footer.ejs
@@ -21,3 +21,4 @@
 
 <%- partial('totop') %>
 <script src="<%- config.root %>totop.js"></script>
+<script src="<%- config.root %>jquery.jcarousel.min.js"></script>
