--- a/themes/yilia/layout/_partial/after-footer.ejs
+++ b/themes/yilia/layout/_partial/after-footer.ejs
@@ -22,4 +22,4 @@
 <script src="<%- config.root %>jquery-3.2.0.js"></script>
 <script src="<%- config.root %>jquery-3.2.0.min.js"></script>
 <%- partial('totop') %>
-<script src="<%- config.root %>totop.js"></script>
+<script src="<%- config.root %>js/totop.js"></script>
