--- a/themes/yilia/layout/_partial/head.ejs
+++ b/themes/yilia/layout/_partial/head.ejs
@@ -38,8 +38,7 @@
       background: <%= theme.style && theme.style.slider ? theme.style.slider : defaultCtnBg %>;
     }
   </style>
-  <script src="<%- config.root %>jquery-3.2.0.js"></script>
-  <script src="<%- config.root %>jquery-3.2.0.min.js"></script>
+  <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
   <%- partial('google-analytics') %>
   <%- partial('baidu-analytics') %>
 </head>
