--- a/themes/yilia/layout/_partial/after-footer.ejs
+++ b/themes/yilia/layout/_partial/after-footer.ejs
@@ -19,5 +19,8 @@
 <%- partial('mathjax') %>
 <% } %>
 
+<link rel="stylesheet" href="<%- config.root %>fancybox/jquery.fancybox.css" type="text/css">
+<script src="<%- config.root %>fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+
 <%- partial('totop') %>
 <script src="<%- config.root %>js/totop.js"></script>
