--- a/themes/yilia/layout/_partial/after-footer.ejs
+++ b/themes/yilia/layout/_partial/after-footer.ejs
@@ -13,6 +13,8 @@
 	}
 </script>
 
+<script src="<%- config.root %>jquery-3.2.0.min.js"></script>
+
 <%- partial('script') %>
 
 <% if (theme.mathjax){ %>
