--- a/themes/yilia/layout/_partial/head.ejs
+++ b/themes/yilia/layout/_partial/head.ejs
@@ -38,6 +38,8 @@
       background: <%= theme.style && theme.style.slider ? theme.style.slider : defaultCtnBg %>;
     }
   </style>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.10.0/styles/default.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.10.0/highlight.min.js"></script>
   <%- partial('google-analytics') %>
   <%- partial('baidu-analytics') %>
 </head>
