--- a/themes/yilia/layout/_partial/css.ejs
+++ b/themes/yilia/layout/_partial/css.ejs
@@ -1,1 +1,2 @@
 <link rel="stylesheet" type="text/css" href="<%=config.root%>./main.2d7529.css">
+<link rel="stylesheet" type="text/css" href="<%=config.root%>./my.css">
