--- a/themes/yilia/source/my.css
+++ b/themes/yilia/source/my.css
@@ -3,9 +3,10 @@
   background: #eee;
   border: 1px solid #bbb;
   border-radius: 10px;
-  margin: 1.5em 0 0.3em 1.5em;
+  margin: 1.5em 0 1.5em 0;
+  /*margin: 1.5em 0 0.3em 1.5em;*/
   padding: 1.2em 1em 0 1em;
-  max-width: 28%;
+  /*max-width: 28%;*/
 }
 .toc-title {
   font-size: 120%;
@@ -13,7 +14,7 @@
 #toc {
   line-height: 1em;
   font-size: 0.9em;
-  float: right;
+  /*float: right;*/
   .toc {
     padding: 0;
     margin: 1em;
