--- a/themes/next/source/css/_common/components/sidebar/sidebar-toc.styl
+++ b/themes/next/source/css/_common/components/sidebar/sidebar-toc.styl
@@ -38,13 +38,15 @@
 }
 
 .post-toc .nav .nav-child {
-  display: hexo-config('toc.expand_all') ? block : none;
+  //display: hexo-config('toc.expand_all') ? block : none;
+  display: block;
 }
 
 .post-toc .nav .active > .nav-child { display: block; }
 
 .post-toc .nav .active-current > .nav-child {
-  show();
+  //show();
+  display: block;
   & > .nav-item { display: block; }
 }
 
