--- a/themes/next/source/css/_common/components/sidebar/sidebar-toc.styl
+++ b/themes/next/source/css/_common/components/sidebar/sidebar-toc.styl
@@ -38,8 +38,7 @@
 }
 
 .post-toc .nav .nav-child {
-  //display: hexo-config('toc.expand_all') ? block : none;
-  display: block;
+  display: hexo-config('toc.expand_all') ? block : none;
 }
 
 .post-toc .nav .active > .nav-child { display: block; }
