--- a/themes/next/source/css/_common/scaffolding/base.styl
+++ b/themes/next/source/css/_common/scaffolding/base.styl
@@ -53,8 +53,10 @@ a, span.exturl {
   border-bottom: 1px solid $link-decoration-color;
 
   &:hover {
-    color: $link-hover-color;
-    border-bottom-color: $link-decoration-hover-color;
+    color: #22F;
+    border-bottom-color: #22F;
+    /*color: $link-hover-color;
+    border-bottom-color: $link-decoration-hover-color;*/
   }
 
   // For spanned external links.
