--- a/themes/next/source/css/_common/components/highlight/highlight.styl
+++ b/themes/next/source/css/_common/components/highlight/highlight.styl
@@ -42,7 +42,7 @@ pre {
   hexo-config('codeblock.border_radius') is a 'unit' ? (cbradius = unit(hexo-config('codeblock.border_radius'), px)) : (cbradius = 1px)
   border-radius: 1em;
   border-color: #e0dfcc;
-  #border-width: 0.3em;
+  border-width: 0.3em;
   border-style: solid;
   margin: 1em 1em;
 
